--- a/package.json
+++ b/package.json
@@ -4,18 +4,13 @@
   "private": true,
   "devDependencies": {
     "serve": "14.2.0",
-    "tree-sitter-c-sharp": "0.20.0",
-    "tree-sitter-cli": "0.20.6",
-    "tree-sitter-java": "0.19.1",
-    "tree-sitter-javascript": "0.19.0",
-    "tree-sitter-kotlin": "0.2.11",
-    "tree-sitter-swift": "0.3.6"
+    "tree-sitter-cli": "0.20.8"
   },
   "dependencies": {
-    "web-tree-sitter": "0.20.5"
+    "web-tree-sitter": "0.20.8"
   },
   "scripts": {
-    "build:wasm": "tree-sitter build-wasm",
+    "build-wasm": "tree-sitter build-wasm",
     "start": "serve"
   },
   "browserslist": {
@@ -37,6 +32,5 @@
   },
   "description": "This repository is inspired by [[https://github.com/aspeddro/tree-sitter-rescript-web-playground][aspeddro/tree-sitter-rescript-web-playground]]",
   "main": "playground.js",
-  "author": "",
   "license": "ISC"
 }
